# watson-overtime

./: .flake8  .pre-commit-config.yaml  README.md  codeql-analysis.yml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
tests/: test_main.py
watson_overtime/: click_timedelta.py  watson_overtime.py
