[tool.poetry]
authors = ["Joris Clement <joclement@posteo.net>"]
description = "Check overtime in combination with the td-watson time tracker"
license = "MIT"
name = "watson-overtime"
readme = "README.md"
repository = "https://github.com/joclement/watson-overtime"
version = "0.3.0"

[tool.poetry.dependencies]
python = "^3.7"
humanize = ">=3.14.0, <5.0.0"
click = ">=7.1.2, <9.0.0"
pytimeparse = "^1.1.8"
importlib-metadata = {version = "4.2.0", python = "<=3.7"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
black = {version = "^24.3.0", python = ">=3.9"}
flake8 = {version = "^4.0.1", python = ">=3.9"}
mypy = {version = ">=0.931, <=1", python = ">=3.9"}
flake8-black = {version = "^0.2.4", python = ">=3.9"}
flake8-import-order = {version = "^0.18.1", python = ">=3.9"}

[tool.poetry.scripts]
watson-overtime = "watson_overtime.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
